Cleanup parser tests to fix previous regressions

--- a/test/parser/testsuite/CMakeLists.txt
+++ b/test/parser/testsuite/CMakeLists.txt
@@ -20,6 +20,11 @@
 configure_file(Makefile.gen ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 configure_file(suite.txt ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 
+file(GLOB PARSE_TESTS *.xml)
+foreach(PARSE_TEST ${PARSE_TESTS})
+	configure_file(${PARSE_TEST} ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
+endforeach()
+
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/xsl)
 
 file(GLOB XSL ./xsl/*)
