--- a/test/parser/testsuite/Makefile.gen
+++ b/test/parser/testsuite/Makefile.gen
@@ -514,30 +514,19 @@ ifblock.cpp.xml : if.cpp.xml ${XSLT_IF2IFBLOCK_XSL}
 	${XSLT_IF2IFBLOCK} --url=if.block $< > $@
 
 c_cpp_mode.restrict.cpp.xml : xsl/c_cpp_mode_basic_template xsl/c_cpp_mode_enum_template xsl/c_cpp_mode_specifier_template xsl/c_cpp_mode_call_template
-	${CAT} xsl/c_cpp_mode_header $^ xsl/c_cpp_mode_footer > $@.temp.xml
-	srcml --output-xml --xslt ${XSLT_RENAME_XSL} --xslt-param 'new_name="restrict"' $@.temp.xml > $@
-	${RM} $@.temp.xml
+	${CAT} xsl/c_cpp_mode_header $^ xsl/c_cpp_mode_footer |	srcml --output-xml --url=$(shell srcml --show-url $<).restrict --xslt ${XSLT_RENAME_XSL} --xslt-param 'new_name="restrict"' > $@
 
 c_cpp_mode.mutable.cpp.xml : xsl/c_cpp_mode_basic_template xsl/c_cpp_mode_enum_template xsl/c_cpp_mode_specifier_template xsl/c_cpp_mode_call_template
-	${CAT} xsl/c_cpp_mode_header $^ xsl/c_cpp_mode_footer > $@.temp.xml
-	srcml --output-xml --xslt ${XSLT_RENAME_XSL} --xslt-param 'new_name="mutable"' $@.temp.xml > $@
-	${RM} $@.temp.xml
+	${CAT} xsl/c_cpp_mode_header $^ xsl/c_cpp_mode_footer |	srcml --output-xml --url=$(shell srcml --show-url $<).mutable --xslt ${XSLT_RENAME_XSL} --xslt-param 'new_name="mutable"' > $@
 
 c_cpp_mode.try.cpp.xml : xsl/c_cpp_mode_basic_template xsl/c_cpp_mode_simple_decl_template xsl/c_cpp_mode_decl_template xsl/c_cpp_mode_single_template xsl/c_cpp_mode_enum_template xsl/c_cpp_mode_call_template
-	${CAT} xsl/c_cpp_mode_header $^ xsl/c_cpp_mode_footer > $@.temp.xml
-	srcml --output-xml --xslt ${XSLT_RENAME_XSL} --xslt-param 'new_name="try"' $@.temp.xml > $@
-	${RM} $@.temp.xml
+	${CAT} xsl/c_cpp_mode_header $^ xsl/c_cpp_mode_footer |	srcml --output-xml --url=$(shell srcml --show-url $<).try --xslt ${XSLT_RENAME_XSL} --xslt-param 'new_name="try"' > $@
 
 c_cpp_mode.catch.cpp.xml : xsl/c_cpp_mode_basic_template xsl/c_cpp_mode_simple_decl_template xsl/c_cpp_mode_decl_template xsl/c_cpp_mode_single_template xsl/c_cpp_mode_enum_template
-	${CAT} xsl/c_cpp_mode_header $^ xsl/c_cpp_mode_footer > $@.temp.xml
-	srcml --output-xml --xslt ${XSLT_RENAME_XSL} --xslt-param 'new_name="catch"' $@.temp.xml > $@
-	${RM} $@.temp.xml
-
+	${CAT} xsl/c_cpp_mode_header $^ xsl/c_cpp_mode_footer |	srcml --output-xml --url=$(shell srcml --show-url $<).catch --xslt ${XSLT_RENAME_XSL} --xslt-param 'new_name="catch"' > $@
 
 c_cpp_mode.class.cpp.xml : xsl/c_cpp_mode_basic_template xsl/c_cpp_mode_decl_template xsl/c_cpp_mode_single_template xsl/c_cpp_mode_call_template
-	${CAT} xsl/c_cpp_mode_header $^ xsl/c_cpp_mode_footer > $@.temp.xml
-	srcml --output-xml --xslt ${XSLT_RENAME_XSL} --xslt-param 'new_name="class"' $@.temp.xml > $@
-	${RM} $@.temp.xml
+	${CAT} xsl/c_cpp_mode_header $^ xsl/c_cpp_mode_footer |	srcml --output-xml --url=$(shell srcml --show-url $<).class --xslt ${XSLT_RENAME_XSL} --xslt-param 'new_name="class"' > $@
 
 # class implementation from class interface
 class_implementation_m.m.xml : class_interface_m.m.xml ${XSLT_INTERFACE2IMPLEMENTATION_XSL}
