--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
         - run: apt-get install -y git ssh xsltproc
         - run: git submodule update --init --recursive
         - run: mkdir build
-        - run: cd build && cmake -DCMAKE_BUILD_TYPE=Debug ..
-        - run: cd build && make
+        - run: cd build && cmake -DCMAKE_BUILD_TYPE=Release ..
+        - run: cd build && make && make install && ldconfig
         - run: ln -s build/bin bin
         - run: cd test/parser && make
