Move template files for parser tests

--- a/test/parser/testsuite/CMakeLists.txt
+++ b/test/parser/testsuite/CMakeLists.txt
@@ -24,3 +24,8 @@ file(GLOB PARSE_TESTS *.xml)
 foreach(PARSE_TEST ${PARSE_TESTS})
 	configure_file(${PARSE_TEST} ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 endforeach()
+
+file(GLOB TEMPLATE_TESTS *.template)
+foreach(TEMPLATE_TEST ${TEMPLATE_TESTS})
+	configure_file(${TEMPLATE_TEST} ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
+endforeach()
