Fix missing URL on combined parser tests

--- a/test/parser/testsuite/Makefile.gen
+++ b/test/parser/testsuite/Makefile.gen
@@ -308,27 +308,27 @@ cleanall :
 	${XSLT_IDENTITY} --url=$(shell srcml --show-url $<) $< > $@
 
 %.all.cpp.xml : %.cpp.xml
-	srcml --unit=1 --output-xml $< | sed 's|</unit>||g' > $@
+	srcml --unit=1 --url=$(shell srcml --show-url $<).all --output-xml $< | sed 's|</unit>||g' > $@
 	srcml --output-xml-raw $< >> $@
 	echo "</unit>" >> $@
 
 %.all.c.xml : %.c.xml
-	srcml --unit=1 --output-xml $< | sed 's|</unit>||g' > $@
+	srcml --unit=1 --url=$(shell srcml --show-url $<).all --output-xml $< | sed 's|</unit>||g' > $@
 	srcml --output-xml-raw $< >> $@
 	echo "</unit>" >> $@
 
 %.all.cs.xml : %.cs.xml
-	srcml --unit=1 --output-xml $< | sed 's|</unit>||g' > $@
+	srcml --unit=1 --url=$(shell srcml --show-url $<).all --output-xml $< | sed 's|</unit>||g' > $@
 	srcml --output-xml-raw $< >> $@
 	echo "</unit>" >> $@
 
 %.all.m.xml : %.m.xml
-	srcml --unit=1 --output-xml $< | sed 's|</unit>||g' > $@
+	srcml --unit=1 --url=$(shell srcml --show-url $<).all --output-xml $< | sed 's|</unit>||g' > $@
 	srcml --output-xml-raw $< >> $@
 	echo "</unit>" >> $@
 
 %.all.java.xml : %.java.xml
-	srcml --unit=1 --output-xml $< | sed 's|</unit>||g' > $@
+	srcml --unit=1 --url=$(shell srcml --show-url $<).all --output-xml $< | sed 's|</unit>||g' > $@
 	srcml --output-xml-raw $< >> $@
 	echo "</unit>" >> $@
 
