Add build all options to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,14 +28,38 @@ option(BUILD_CLIENT_TESTS "Build srcml client tests" ON)
 option(BUILD_LIBSRCML_TESTS "Build unit tests for libsrcml" OFF)
 option(BUILD_PARSER_TESTS "Include tests for parser" ON)
 
+# Turn ON building all tests
+option(BUILD_ALL_TESTS "Build all tests" OFF)
+if(BUILD_ALL_TESTS)
+	set(BUILD_CLIENT_TESTS ON)
+	set(BUILD_LIBSRCML_TESTS ON)
+	set(BUILD_PARSER_TESTS ON)
+endif()
+
 # Turn ON/OFF building examples
 option(BUILD_EXAMPLES "Build examples usage files for libsrcml" OFF)
 
-# Turn ON/OFF building libsrcml statically
-option(BUILD_LIBSRCML_STATIC "Build a static version of libsrcml" OFF)
-
+# Turn ON/OFF building documentation
 option(BUILD_CLIENT_DOC "Build client documentation" OFF)
 option(BUILD_LIBSRCML_DOC "Build libsrcml documentation" OFF)
+
+# Turn ON building all documentation
+option(BUILD_ALL_DOCS "Build all documentation" OFF)
+if(BUILD_ALL_DOCS)
+	set(BUILD_CLIENT_DOC ON)
+	set(BUILD_LIBSRCML_DOC ON)
+endif()
+
+# Turn ON everything
+option(BUILD_ALL "Build all test, documentation, and examples" OFF)
+if(BUILD_ALL)
+	set(BUILD_ALL_TESTS ON)
+	set(BUILD_EXAMPLES ON)
+	set(BUILD_ALL_DOCS ON)
+endif()
+
+# Turn ON/OFF building libsrcml statically
+option(BUILD_LIBSRCML_STATIC "Build a static version of libsrcml" OFF)
 
 # The default configuration is to compile in Release mode
 if(NOT CMAKE_BUILD_TYPE)
