--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,6 +17,8 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
+include_directories(BEFORE ${CMAKE_SOURCE_DIR}/src/libsrcml)
+
 if(BUILD_CLIENT_TESTS)
     add_subdirectory(client)
 endif()
